# fingaurd

./: .env.example  .gitignore  README.md  pyproject.toml
evaluation/: run_eval.py
src/: adaptive_thresholds.py  config.py  main.py
src/agents/: portfolio_engine.py  risk_rules.py
src/api/: models.py  routes.py
src/classifier/: intent.py  llm_classifier.py  schema.py
src/memory/: session.py
src/metrics/: tracker.py
src/safety/: guard.py  patterns.json
tests/: conftest.py  test_intent.py  test_portfolio.py  test_risk.py  test_safety.py
